<resources>
    <string name="app_name" translatable="false">Gmind app</string>
    <string name="hi" translatable="false">Hi</string>
    <string name="wlecome_register" translatable="false">Glad to see you here\nfor first time</string>
    <string name="first_name" translatable="false">first name</string>
    <string name="last_name" translatable="false">last name</string>
    <string name="email" translatable="false">email</string>
    <string name="age" translatable="false">age</string>
    <string name="confirm_password" translatable="false">confirm password</string>
    <string name="or_continue_with">________ or continue with _______</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome to GMind App</string>
    <string name="chat">Chat with your friends</string>
    <string name="games">All you games in one app</string>
    <string name="welcome_desc">We provide 3D games , AR , VR and Animation to enhance the formal and informal education process</string>
    <string name="chat_desc">While not playing you can chat with your friends</string>
    <string name="games_desc">Use the app to access all our education games and browse the new games too!</string>

    <string name="Hello">Hello Again!</string>
    <string name="username">Enter username</string>
    <string name="password">Password</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="continue_with">Or continue with</string>
    <string name="not_member">Not a member?</string>
    <string name="register_now">Register now</string>
    <string name="poster_content_description">Poster</string>
    <string name="description">Description</string>
    <string name="description_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

</resources>